--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     </main>
 
   </div>
-  <script src="https://unpkg.com/kinto-http/dist/kinto-http.min.js"></script>
+  <script src="//js.pusher.com/3.2/pusher.min.js"></script>
+  <script src="//unpkg.com/kinto-http/dist/kinto-http.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
 </html>
